Jugador1 anota uan vez con cucumber OK

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
 Bienvenidos a Tennis
-<form name="iniciar" action="/juego" method="post">
+<form name="iniciar" action="/juego" method="get">
   <input type="submit" value="Iniciar">
 </form>
