Primera anotacion de jugador 2 OK

--- a/views/juego.erb
+++ b/views/juego.erb
@@ -3,5 +3,8 @@
 <form action="/jugador1_anota" method="post">
   <input type="submit" value="anotar jugador 1">
 </form>
+<form action="/jugador2_anota" method="post">
+  <input type="submit" value="anotar jugador 2">
+</form>
 
 
