Pruebas con cucumber terminado

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,6 @@
-Bienvenidos a Tennis
-<form name="iniciar" action="/juego" method="get">
-  <input type="submit" value="Iniciar">
-</form>
+<div align="center">
+  Bienvenidos a Tennis
+  <form name="iniciar" action="/juego" method="get">
+    <input type="submit" value="Iniciar">
+  </form>
+</div>
