--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,10 @@
+<br><br><br><br>
 <div align="center">
-  Bienvenidos a Tennis
+  <h1>Bienvenidos a Tennis</h1>
+  <br><br>
+
   <form name="iniciar" action="/juego" method="get">
     <input type="submit" value="Iniciar">
   </form>
 </div>
+
