--- a/views/juego.erb
+++ b/views/juego.erb
@@ -1,10 +1,18 @@
+<br><br><br><br>
+<div align="center">
+  <h1>scores : <%= $obj.scorer %></h1>
+  <br><br>
+  <form action="/jugador1_anota" method="post">
+    <input type="submit" value="anotar jugador 1">
+  </form>
+  <form action="/jugador2_anota" method="post">
+    <input type="submit" value="anotar jugador 2">
+  </form>
 
-<h1>scores <%= $obj.scorer %></h1>
-<form action="/jugador1_anota" method="post">
-  <input type="submit" value="anotar jugador 1">
-</form>
-<form action="/jugador2_anota" method="post">
-  <input type="submit" value="anotar jugador 2">
-</form>
+  <form action="/reiniciar" method="post">
+    <input type="submit" value="reiniciar">
+  </form>
+
+</div>
 
 
